--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
